--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,45 +1,30 @@
-name: Frontend CI
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+    branches: [ "master" ]  # or "main" or whichever branch you prefer
 
 jobs:
-  build-test-lint:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16'
-
-    - name: Install dependencies
-      run: npm ci
-
-    - name: Lint code
-      run: npm run lint
-
-    - name: Run unit tests
-      run: npm run test:unit
-
-    - name: Build production assets
-      run: npm run build
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
     - name: Login to Docker Hub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v4
+      uses: docker/build-push-action@v5
       with:
         context: .
+        file: ./Dockerfile
         push: true
         tags: tutulchakma/finch-frontend:latest
