--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,30 +1,55 @@
-name: Build and Push Docker Image
+name: Frontend CI/CD
 
 on:
   push:
-    branches: [ "master" ]  # or "main" or whichever branch you prefer
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  build-and-push:
+  build-test-lint:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+    - name: Set up Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
 
-    - name: Login to Docker Hub
+    - name: Install dependencies
+      run: npm ci
+      working-directory: ./frontend
+
+    - name: Lint
+      run: npm run lint
+      working-directory: ./frontend
+
+    - name: Run unit tests
+      run: npm run test:unit
+      working-directory: ./frontend
+
+    - name: Build project
+      run: npm run build
+      working-directory: ./frontend
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: build-test-lint
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        tags: tutulchakma/finch-frontend:latest
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend:latest ./frontend
+        docker push ${{ secrets.DOCKER_USERNAME }}/frontend:latest
