--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -2,9 +2,9 @@ name: Frontend CI/CD
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build-test-lint:
@@ -51,5 +51,5 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend:latest ./frontend
-        docker push ${{ secrets.DOCKER_USERNAME }}/frontend:latest
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/finch-frontend:latest ./frontend
+        docker push ${{ secrets.DOCKER_USERNAME }}/finch-frontend:latest
