--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,10 +1,10 @@
-name: Frontend CI/CD
+name: Frontend CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [main]
   pull_request:
-    branches: [ master ]
+    branches: [main]
 
 jobs:
   build-test-lint:
@@ -12,44 +12,34 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
 
-    - name: Set up Node
-      uses: actions/setup-node@v4
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v3
       with:
-        node-version: '20'
+        node-version: '16'
 
     - name: Install dependencies
       run: npm ci
-      working-directory: ./frontend
 
-    - name: Lint
+    - name: Lint code
       run: npm run lint
-      working-directory: ./frontend
 
     - name: Run unit tests
       run: npm run test:unit
-      working-directory: ./frontend
 
-    - name: Build project
+    - name: Build production assets
       run: npm run build
-      working-directory: ./frontend
 
-  docker:
-    runs-on: ubuntu-latest
-    needs: build-test-lint
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
-      run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/finch-frontend:latest ./frontend
-        docker push ${{ secrets.DOCKER_USERNAME }}/finch-frontend:latest
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/finch-frontend:latest
