--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-unit-mocha": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
