--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -42,4 +42,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/finch-frontend:v1
+        tags: ${{ secrets.DOCKER_USERNAME }}/finch-frontend:latest
